--- a/ConsoleLoG/ConsoleLoG/ConsoleLoG.vcxproj.filters
+++ b/ConsoleLoG/ConsoleLoG/ConsoleLoG.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="GameOfLife.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Pattern.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameOfLife.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Pattern.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
