--- a/ConsoleLoG/ConsoleLoG/ConsoleLoG.vcxproj.filters
+++ b/ConsoleLoG/ConsoleLoG/ConsoleLoG.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="CellularAutomata.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="GameField.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameOfLife.h">
@@ -36,6 +39,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="CellularAutomata.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="GameField.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
