Интерфейс для тестирования конфигурации

--- a/Prototype/Config/DefaultEngine.ini
+++ b/Prototype/Config/DefaultEngine.ini
@@ -17,6 +17,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/NewMap.NewMap
+GameDefaultMap=/Game/NewMap.NewMap
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
