--- a/Prototype/Config/DefaultEngine.ini
+++ b/Prototype/Config/DefaultEngine.ini
@@ -8,6 +8,10 @@ r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.AntiAliasing=3
+r.DefaultFeature.LensFlare=True
+r.GenerateMeshDistanceFields=False
+r.RayTracing=False
+r.Mobile.AllowDistanceFieldShadows=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
