tutorial with some bugs

--- a/Prototype/Config/DefaultEngine.ini
+++ b/Prototype/Config/DefaultEngine.ini
@@ -16,9 +16,10 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/NewMap.NewMap
+EditorStartupMap=/Game/tutorial.tutorial
 GameDefaultMap=/Game/NewMap.NewMap
 GameInstanceClass=/Game/Blueprints/Global.Global_C
+GlobalDefaultGameMode=/Game/Blueprints/Turn-Based.Turn-Based_C
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
