--- a/Prototype/Config/DefaultEngine.ini
+++ b/Prototype/Config/DefaultEngine.ini
@@ -20,8 +20,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/tutorial.tutorial
-GameDefaultMap=/Game/tutorial.tutorial
+EditorStartupMap=/Game/Welcome.Welcome
+GameDefaultMap=/Game/Welcome.Welcome
 GameInstanceClass=/Game/Blueprints/Global.Global_C
 GlobalDefaultGameMode=/Game/Blueprints/Turn-Based.Turn-Based_C
 
@@ -88,4 +88,5 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
 
